# xlsxdiff

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  generate_benchmarks.py  run_benchmark.py
benchmarks/cases/001_simple_assumption/: README.md  baseline.xlsx  candidate.xlsx  expected.diff.json  expected.llm_summary.md  workbook_diff.yml
benchmarks/cases/002_named_range_change/: README.md  baseline.xlsx  candidate.xlsx  expected.diff.json  expected.llm_summary.md  workbook_diff.yml
benchmarks/cases/003_large_range_membership/: README.md  baseline.xlsx  candidate.xlsx  expected.diff.json  expected.llm_summary.md  workbook_diff.yml
benchmarks/cases/004_inserted_modeling_step/: README.md  baseline.xlsx  candidate.xlsx  expected.diff.json  expected.llm_summary.md  workbook_diff.yml
benchmarks/cases/005_manual_calc_mode/: README.md  baseline.xlsx  candidate.xlsx  expected.diff.json  expected.llm_summary.md  workbook_diff.yml
benchmarks/cases/006_formula_cache_unchanged/: README.md  baseline.xlsx  candidate.xlsx  expected.diff.json  expected.llm_summary.md  workbook_diff.yml
benchmarks/cases/007_structured_table_reference/: README.md  baseline.xlsx  candidate.xlsx  expected.diff.json  expected.llm_summary.md  workbook_diff.yml
benchmarks/cases/008_external_reference/: README.md  baseline.xlsx  candidate.xlsx  expected.diff.json  expected.llm_summary.md  workbook_diff.yml
benchmarks/cases/009_hidden_sheet_driver/: README.md  baseline.xlsx  candidate.xlsx  expected.diff.json  expected.llm_summary.md  workbook_diff.yml
benchmarks/cases/010_multiple_upstream_roots/: README.md  baseline.xlsx  candidate.xlsx  expected.diff.json  expected.llm_summary.md  workbook_diff.yml
benchmarks/cases/011_formula_to_hardcode_override/: README.md  baseline.xlsx  candidate.xlsx  expected.diff.json  expected.llm_summary.md  workbook_diff.yml
benchmarks/cases/012_compacted_formula_chain/: README.md  baseline.xlsx  candidate.xlsx  expected.diff.json  expected.llm_summary.md  workbook_diff.yml
docs/examples/simple_assumption_report/: README.md  (+7 more)
examples/ai_arr_capex/: README.md  run_diff.py  workbook_diff.yml
schemas/: diff.schema.v0.1.json  llm_summary.schema.v0.1.json
src/workbook_diff/: __init__.py  alignment.py  cli.py  diff.py  formulas.py  models.py  reporting.py  security.py  snapshot.py  utils.py
tests/: test_public_benchmarks.py  test_workbook_diff.py
(+25 files in other folders)
